Version 0.10.0 (2014-03-XX)
---------------------------
Created new Tracker Protocol sub-project (#550)
Selected and integrated a JSON schema validation tool into the sub-project (#551) (TODO)
Implemented Grunt(#552) (TODO)
Implemented Intern(#553) (TODO)
Added ad impression JSON schema and tests (#554) (TODO)
Added ad click JSON schema and tests (#556) (TODO)
Added ad conversion JSON schema and tests (#556) (TODO)
Added JSON schema and tests to tracker-protocol (#557) (TODO)

Version 0.9.4 (2014-05-30)
---------------------------
Redshift: added reference_data.country_codes (#779)
Postgres: added reference_data.country_codes (#781) 
Looker Analytics: New 'traffic_pulse' dashboard with globally configurable drill-down variables (#765)
Looker Analytics: Snowplow website specific dimensions and metrics removed: base model is now company-generic (#764)
Looker Analytics: cleaner joining of data sets in Looker model (#763)
Looker Analytics: dimensions and metrics renamed to make it clearer for an analyst getting started with the data (#761)
Looker Analytics: added distkeys and sortkeys to derived tables to speed up query times (#696)
Looker Analytics: derived tables now auto-generated when new data is loaded into atomic.events (#688)
Looker Analytics: 'visits' renamed to 'sessions' (#762)
Looker Analytics: LookML models versioned using SchemaVer (#766)

Version 0.9.3 (2014-05-21)
--------------------------
EmrEtlRunner: bumped to 0.7.0
EmrEtlRunner: bumped Sluice to 0.2.1 (#405)
EmrEtlRunner: bumped Elasticity to 3.0.4 (#665)
EmrEtlRunner: replaced hadoop_version setting with ami_version setting (#701)
EmrEtlRunner: fixed handling of region, placement and ec2_subnet_id (#754)
EmrEtlRunner: fixed regression where 0 files staged still kicks off EMR (#409)
EmrEtlRunner: stopped Sluice file operation threads being killed by folders (#401)
EmrEtlRunner: fixed disabling of Cascading error catching (#721)